# pruv

./: Anchor.toml  Cargo.toml  LICENSE  README.md  attestation_retry.db  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proof_cache.db-shm  proof_cache.db-wal  tsconfig.json
circuits/: Cargo.toml
circuits/benches/: proof_bench.rs
circuits/src/: batch_prover.rs  circuit_params.rs  code_integrity.rs  governance_vote.rs  lib.rs  merkle.rs  poseidon_hasher.rs  proving_key_cache.rs  srs.rs
circuits/tests/: circuits_test.rs  test_batch.rs  test_code_integrity.rs  test_governance.rs  test_merkle.rs  test_poseidon.rs  test_proving_cache.rs  test_srs.rs
docs/: integration-guide.md  node-setup.md  whitepaper.md
local-test/: analyze-logs.sh  bench-proof.sh  monitor.sh  run-2node-prod.sh  run-3node.sh  stress-test.sh
local-test/metrics/: memory.csv  node1_snap0_1776174579.txt  node1_snap2_1776174599.txt  node1_snap3_1776174609.txt  node1_snap4_1776174619.txt  node2_snap2_1776174599.txt  node2_snap4_1776174619.txt
node-software/: Cargo.toml
node-software/src/: attestor.rs  config.rs  lib.rs  lottery.rs  main.rs  monitor.rs  p2p.rs  prover.rs  retry_queue.rs
node-software/tests/: config_test.rs  integration_2node.rs  lottery_test.rs  node_startup.rs  p2p_wire.rs  pipeline_test.rs  proof_cache.rs
programs/pruv-attestation/: Cargo.toml
programs/pruv-attestation/src/: lib.rs
programs/pruv-governance/: Cargo.toml
programs/pruv-governance/src/: lib.rs
programs/pruv-lottery/: Cargo.toml
programs/pruv-lottery/src/: lib.rs
programs/pruv-node/: Cargo.toml
programs/pruv-node/src/: lib.rs
programs/pruv-registry/: Cargo.toml
programs/pruv-registry/src/: lib.rs
rpc-client/: package.json  tsconfig.json
rpc-client/src/: billing.ts  index.ts  proxy.ts  trust_middleware.ts
sdk/: package.json
sdk/src/: client.test.ts  client.ts  connection.ts  index.ts  lottery.ts  types.ts
test-ledger/: genesis.tar.bz2
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1775910845392906  MANIFEST-000021
