[package]
name = "pruv-circuits"
version = "0.1.0"
edition = "2021"
description = "Pruv Halo2 KZG/BN254 ZK circuits — production-grade, no mock"

[lib]
name = "pruv_circuits"

[[bench]]
name = "proof_bench"
harness = false

[dependencies]
# Halo2 UltraPLONK — KZG/BN254 backend (PSE v0.4.0)
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", branch = "main" }

# Native BN254 Poseidon-128 (Circom-compatible, same constants as Semaphore/Tornado Cash).
# light-poseidon uses ark_ff internally, so we also bring in ark-bn254 for field conversion.
light-poseidon = "0.2"
ark-bn254 = "0.4"
ark-ff     = "0.4"

# Field arithmetic (re-exported by halo2_proofs; use same version)
ff    = "0.13"
group = "0.13"

# RNG
rand = { version = "0.8", features = ["small_rng"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"

# SHA-256 for code-integrity witness
sha2 = "0.10"

# Error handling
thiserror = "1"
anyhow    = "1"

# Parallelism
rayon = "1"

# Thread-safe SRS cache
dashmap = "5"

# Lazy statics
once_cell = "1"

# Logging
tracing = "0.1"

[features]
# Enable mock mode (JSON-stub prove/verify, no real ZK proof).
# By default, production KZG proofs are used.
mock = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof     = { version = "0.13", features = ["flamegraph", "criterion"] }
rayon     = "1"
