[package]
name = "pruv-node"
version = "0.1.0"
edition = "2021"
description = "Pruv node registry — staking, slashing and reward distribution"

[lib]
crate-type = ["cdylib", "lib"]
name = "pruv_node"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }